--- a/src/components/Formulario/Formulario.css
+++ b/src/components/Formulario/Formulario.css
@@ -5,3 +5,19 @@
     align-items: center;
     justify-content: center;
 }
+
+.form-container {
+    display: flex;
+}
+
+.btn-container {
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn-signup {
+    width: 50%;
+    margin-top: .5rem;
+}
